# react-jupyter-extension

./: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
react-extension-boilerplate/: __init__.py
src/: index.ts  widget.tsx
